# OpenACE

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  openace-implementation-plan.md  package-lock.json  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
crates/oc-bench/: CLAUDE.md  Cargo.toml
crates/oc-bench/benches/: fulltext_bm25.rs  graph_khop.rs  index_full.rs  index_incremental.rs  parser_throughput.rs  vector_knn.rs
crates/oc-bench/src/: fixture.rs
crates/oc-bench/tests/: e2e_incremental.rs  e2e_search.rs
crates/oc-core/: CLAUDE.md  Cargo.toml
crates/oc-core/src/: chunk.rs  error.rs  language.rs  lib.rs  qualified_name.rs  relation.rs  symbol.rs
crates/oc-indexer/: CLAUDE.md  Cargo.toml
crates/oc-indexer/src/: error.rs  incremental.rs  lib.rs  pipeline.rs  report.rs  resolver.rs  scanner.rs  watcher.rs
crates/oc-indexer/tests/: integration_incremental.rs  integration_pipeline.rs
crates/oc-parser/: CLAUDE.md  Cargo.toml
crates/oc-parser/src/: body_hash.rs  chunker.rs  error.rs  file_check.rs  lib.rs  registry.rs  visitor.rs
crates/oc-parser/src/visitor/: go_lang.rs  java.rs  python.rs  rust_lang.rs  typescript.rs
crates/oc-parser/tests/: go_tests.rs  java_tests.rs  python_tests.rs  rust_tests.rs  typescript_tests.rs
crates/oc-python/: CLAUDE.md  Cargo.toml
crates/oc-python/src/: engine.rs  lib.rs  types.rs  watcher.rs
crates/oc-retrieval/: CLAUDE.md  Cargo.toml
crates/oc-retrieval/src/: engine.rs  error.rs  lib.rs
crates/oc-storage/: CLAUDE.md  Cargo.toml
crates/oc-storage/src/: error.rs  fulltext.rs  graph.rs  lib.rs  manager.rs  vector.rs
eval/: RETRIEVAL_ANALYSIS.md  RETRIEVAL_IMPROVEMENT_PROMPT.md  RETRIEVAL_OPTIMIZATION_PROMPT.md  ace_tool_eval.py  run_comparison.py  run_eval.py
eval/configs/: custom_api.yaml  full_run.yaml  small_test.yaml
eval/swebench/: __init__.py  analyze.py  config.py  context_retrieval.py  dataset.py  formatter.py  llm_client.py  mini_runner.py  patch_generator.py  repo_manager.py  retrieval_eval.py  runner.py
eval/swebench/prompts/: patch_generation.txt
npm/: README.md  package.json
openspec/changes/archive/2026-02-10-openace-phase1-mvp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-openace-phase1-mvp/specs/cargo-workspace/: spec.md
openspec/changes/archive/2026-02-10-openace-phase1-mvp/specs/code-parser/: spec.md
openspec/changes/archive/2026-02-10-openace-phase1-mvp/specs/graph-storage/: spec.md
openspec/changes/archive/2026-02-10-openace-phase1-mvp/specs/indexing-pipeline/: spec.md
openspec/changes/archive/2026-02-10-openace-phase1-mvp/specs/retrieval-engine/: spec.md
openspec/changes/archive/2026-02-10-openace-phase1-mvp/specs/vector-index/: spec.md
openspec/changes/archive/2026-02-21-implement-logging-system/specs/python-structlog/: spec.md
openspec/changes/archive/2026-02-21-implement-logging-system/specs/rust-tracing-infra/: spec.md
openspec/changes/archive/2026-02-21-implement-logging-system/specs/trace-id-propagation/: spec.md
openspec/changes/implement-logging-system/: design.md  proposal.md  tasks.md
openspec/specs/core-types/: spec.md
openspec/specs/file-watcher/: spec.md
openspec/specs/fulltext-index/: spec.md
openspec/specs/incremental-update/: spec.md
openspec/specs/rust-instrumentation/: spec.md
openspec/specs/sensitive-data-protection/: spec.md
plugins/claude/openace-context-engine/: .mcp.json  README.md
plugins/claude/openace-context-engine/.claude-plugin/: plugin.json
plugins/claude/openace-context-engine/agents/: context-expert.md  deep-researcher.md
plugins/claude/openace-context-engine/skills/codebase-retrieval/: SKILL.md
plugins/claude/openace-context-engine/skills/deep-search/: SKILL.md
python/: CLAUDE.md
python/openace/: __init__.py  _openace.pyi  cli.py  engine.py  exceptions.py  logging.py  query_expansion.py  search_utils.py  signal_weighting.py  summary.py  types.py
python/openace/embedding/: __init__.py  adaptive.py  factory.py  local.py  openai_backend.py  protocol.py
python/openace/reranking/: __init__.py  api_reranker.py  cross_encoder.py  factory.py  llm_backend.py  protocol.py  rule_based.py
python/openace/server/: __init__.py  app.py
tests/: conftest.py  test_embedding.py  test_engine.py  test_identifier_extraction.py  test_mcp.py  test_reranking.py
