[workspace]
members = [
    "crates/oc-core",
    "crates/oc-parser",
    "crates/oc-storage",
    "crates/oc-indexer",
    "crates/oc-retrieval",
    "crates/oc-bench",
    "crates/oc-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"

[workspace.dependencies]
# Shared types crate
oc-core = { path = "crates/oc-core" }
oc-parser = { path = "crates/oc-parser" }
oc-storage = { path = "crates/oc-storage" }
oc-indexer = { path = "crates/oc-indexer" }
oc-retrieval = { path = "crates/oc-retrieval" }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelism
rayon = "1.10"

# tree-sitter
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"
usearch = "2.21"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# File walking (.gitignore aware)
ignore = "0.4"

# Crossbeam channels
crossbeam-channel = "0.5"

# Logging / tracing
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "registry", "env-filter", "json"] }
tracing-log = { version = "0.2", default-features = false, features = ["std", "log-tracer"] }

# Dev / benchmarks
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
