[package]
name = "oc-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Triple-backend storage for OpenACE (SQLite + Tantivy + usearch)"

[dependencies]
oc-core.workspace = true
rusqlite.workspace = true
tantivy.workspace = true
usearch.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
xxhash-rust.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
